LAB Export to PDF

--- a/notebooks/00_LAB/LAB_1_neu.ipynb
+++ b/notebooks/00_LAB/LAB_1_neu.ipynb
@@ -8,13 +8,15 @@
     "<a href=\"../../README.md\"> &uarr; TOC &uarr; </a>\n",
     "<img src='../_img/icon.svg' align='right' width='10%'></img>\n",
     "\n",
-    "<b>Name, Vorname: Nguyen, Hoang Son</b> \n",
+    "<b>\n",
     "\n",
-    "Gruppe x\n",
+    "|Gruppe P| |\n",
+    "| ---- | ---- |\n",
+    "|Alsheikh, Roubeer | |\n",
+    "|Nouri, Nawid | |\n",
+    "|Nguyen, Hoang Son | |\n",
     "\n",
-    "Alsheikh, Roubeer\n",
-    "\n",
-    "Nouri, Nawid\n",
+    "</b> \n",
     "\n",
     "### Inhalt\n",
     "[0. Allgemeine Hinweise](#allgemeines)\n",
